[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/Components/AbilityManager.gd" type="Script" id=1]
[ext_resource path="res://Hitboxes & Hurtboxes/Hitbox.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[node name="AbilityManager" type="Node2D"]
script = ExtResource( 1 )

[node name="AbilityTimer1" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="AbilityTimer2" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="AbilityTimer3" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="FriendlyDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FriendlyDetector"]
shape = SubResource( 1 )

[node name="HitboxPivot" type="Position2D" parent="."]

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 2 )]
